# GNU_Molecular_Compiler-Interpreter_toolchain

./: .gitattributes  ABOUT-NLS  CONTRIBUTING.md  Makefile.def  Makefile.in  Makefile.tpl  README.md  SPL-README  ar-lib  compile  config-ml.in  config.guess  config.rpath  config.sub  configure  configure.ac  depcomp  install-sh  libtool-ldflags  libtool.m4  ltgcc.m4  ltmain.sh  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4  makefile.vms  missing  mkdep  mkinstalldirs  move-if-change  multilib.am  setup.com  src-release.sh  symlink-tree  test-driver  ylwrap
libcc1/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  callbacks.cc  callbacks.hh  compiler-name.hh  compiler.cc  compiler.hh  configure  configure.ac  connection.cc  connection.hh  connection.scpel  context.cc  context.hh  context.scpel  deleter.hh  findcomp.cc  findcomp.hh  gdbctx.hh  libcc1.cc  libcc1.scpel  libcc1plugin.cc  libcc1plugin.scpel  libcp1.cc  libcp1.scpel  libcp1plugin.cc  marshall-cp.hh  marshall.cc  marshall.hh  names.cc  names.hh  rpc.hh  status.hh
libctf/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  ctf-archive.c  ctf-create.c  ctf-decl.c  ctf-decls.h  ctf-dedup.c  ctf-dump.c  ctf-endian.h  ctf-error.c  ctf-hash.c  ctf-impl.h  ctf-inlines.h  ctf-intl.h  ctf-labels.c  ctf-link.c  ctf-lookup.c  ctf-open-bfd.c  ctf-open.c  ctf-qsort_r.c  ctf-serialize.c  ctf-sha1.c  ctf-sha1.h  ctf-string.c  ctf-subr.c  ctf-types.c  ctf-util.c  elf.h  libctf.ver  swap.h
libctf/testsuite/config/: default.exp
libstdc++-v3/include/: Makefile.am  Makefile.in
libstdc++-v3/include/backward/: auto_ptr.h  backward_warning.h  binders.h  hash_fun.h  hash_map  hash_set  hashtable.h  strstream
libstdc++-v3/include/bits/: algorithmfwd.h  align.h  alloc_traits.h  allocated_ptr.h  allocator.h  atomic_base.h  atomic_futex.h  atomic_timed_wait.h  atomic_wait.h  basic_ios.h  basic_ios.tcc  basic_string.h  basic_string.tcc  boost_concept_check.h  c++0x_warning.h  c++config  char_traits.h  charconv.h  chrono.h  codecvt.h  concept_check.h  cow_string.h  cpp_type_traits.h  deque.tcc  enable_special_members.h  erase_if.h  forward_list.h  forward_list.tcc  fs_dir.h  fs_fwd.h  fs_ops.h  fs_path.h  fstream.tcc  functexcept.h  functional_hash.h  gslice.h  gslice_array.h  hashtable.h  hashtable_policy.h  indirect_array.h  (+106 more)
libstdc++-v3/include/c/: cassert  cctype  cerrno  cfloat  ciso646  climits  clocale  cmath  csetjmp  csignal  cstdarg  cstddef  cstdio  cstdlib  cstring  ctime  cuchar  cwchar  cwctype
libstdc++-v3/include/c_compatibility/: assert.h  complex.h  ctype.h  errno.h  fenv.h  float.h  inttypes.h  iso646.h  limits.h  locale.h  math.h  setjmp.h  signal.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  tgmath.h  time.h  uchar.h  wchar.h  wctype.h
libstdc++-v3/include/c_global/: ai  cassert  ccomplex  cctype  cerrno  cfenv  cfloat  cinttypes  ciso646  climits  clocale  cmath  csetjmp  csignal  cstdalign  cstdarg  cstdbool  cstddef  cstdint  cstdio  cstdlib  cstring  ctgmath  ctime  cuchar  cwchar  cwctype
libstdc++-v3/include/c_std/: ai  cassert  cctype  cerrno  cfloat  ciso646  climits  clocale  cmath  csetjmp  csignal  cstdarg  cstddef  cstdio  cstdlib  cstring  ctime  cuchar  cwchar  cwctype
libstdc++-v3/include/debug/: array  assertions.h  bitset  debug.h  deque  formatter.h  forward_list  functions.h  helper_functions.h  list  macros.h  map  map.h  multimap.h  multiset.h  safe_base.h  safe_container.h  safe_iterator.h  safe_iterator.tcc  safe_local_iterator.h  safe_local_iterator.tcc  safe_sequence.h  safe_sequence.tcc  safe_unordered_base.h  safe_unordered_container.h  safe_unordered_container.tcc  set  set.h  stl_iterator.h  string  unordered_map  unordered_set  vector
libstdc++-v3/include/decimal/: decimal  decimal.h
libstdc++-v3/include/experimental/: algorithm  any  array  buffer  chrono  deque  executor  filesystem  forward_list  functional  internet  io_context  iterator  list  map  memory  memory_resource  net  netfwd  numeric  optional  propagate_const  random  ratio  regex  set  simd  socket  source_location  string  string_view  system_error  timer  tuple  type_traits  unordered_map  unordered_set  utility  vector
libstdc++-v3/include/ext/: algorithm  aligned_buffer.h  alloc_traits.h  atomicity.h  bitmap_allocator.h  cast.h  cmath  codecvt_specializations.h  concurrence.h  debug_allocator.h  enc_filebuf.h  extptr_allocator.h  functional  iterator  malloc_allocator.h  memory  mt_allocator.h  new_allocator.h  numeric  numeric_traits.h  pod_char_traits.h  pointer.h  pool_allocator.h  random  random.tcc  rb_tree  rc_string_base.h  rope  ropeimpl.h  slist  sso_string_base.h  stdio_filebuf.h  stdio_sync_filebuf.h  string_conversions.h  throw_allocator.h  type_traits.h  typelist.h  vstring.h  vstring.tcc  vstring_fwd.h  (+1 more)
libstdc++-v3/include/parallel/: algo.h  algobase.h  algorithm  algorithmfwd.h  balanced_quicksort.h  base.h  basic_iterator.h  checkers.h  compatibility.h  compiletime_settings.h  equally_split.h  features.h  find.h  find_selectors.h  for_each.h  for_each_selectors.h  iterator.h  list_partition.h  losertree.h  merge.h  multiseq_selection.h  multiway_merge.h  multiway_mergesort.h  numeric  numericfwd.h  omp_loop.h  omp_loop_static.h  par_loop.h  parallel.h  partial_sum.h  partition.h  queue.h  quicksort.h  random_number.h  random_shuffle.h  search.h  set_operations.h  settings.h  sort.h  tags.h  (+3 more)
libstdc++-v3/include/precompiled/: extc++.h  stdc++.h  stdtr1c++.h
libstdc++-v3/include/pstl/: algorithm_fwd.h  algorithm_impl.h  execution_defs.h  execution_impl.h  glue_algorithm_defs.h  glue_algorithm_impl.h  glue_execution_defs.h  glue_memory_defs.h  glue_memory_impl.h  glue_numeric_defs.h  glue_numeric_impl.h  memory_impl.h  numeric_fwd.h  numeric_impl.h  parallel_backend.h  parallel_backend_serial.h  parallel_backend_tbb.h  parallel_backend_utils.h  parallel_impl.h  pstl_config.h  unseq_backend_simd.h  utils.h
libstdc++-v3/include/std/: algorithm  any  array  atomic  barrier  bit  bitset  charconv  chrono  codecvt  complex  concepts  (+61 more)
(+6230 files in other folders)
